[build-system]
requires = [
    "setuptools>=70.0.0",
    "wheel",
    "build",
]
build-backend = "setuptools.build_meta"

[project]
name = "logassert"
version = "8.5"
license = {file = "LICENSE"}
description = "Simple but powerful assertion and verification of logged lines"
authors = [
    {name = "Facundo Batista", email = "facundo@taniquetil.com.ar"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Framework :: Pytest",

    "Environment :: Console",

    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

    "Natural Language :: English",
    "Natural Language :: Spanish",

    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
"Source code" = 'https://github.com/facundobatista/logassert'

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-pyproject",
    "pytest",
    "structlog",
]

[project.entry-points.pytest11]
logassert = "logassert.pytest_plugin"

[tool.setuptools.packages.find]
include = ["logassert*"]
